# ai-ecosystem-mono

./: .pre-commit-config.yaml  Makefile  README.md  code_analysis_report.md  docker-compose.dev.yml  redundancy_refactoring_plan.md  syntax_check.py
.devcontainer/: .env.example  Dockerfile  devcontainer.json  orchestrator-requirements.txt  setup.sh  shared-requirements.txt
.github/: pull_request_template.md
.github/sprint-0/: project-config.md  summary.md
.github/sprint-0/issues/: a-01-lead-research-agent.md  c-01-usage-tracker.md  e-01-staging-smoke-run.md  g-01-policygate-wiring.md  m-01-memory-tests.md  t-01-langsmith-tracer.md  v-01-vector-janitor.md
.github/workflows/: build-and-push.yml  ci.yml  deploy_orchestrator.yml  terraform.yml
agents/: pyproject.toml
agents/base/: sales_agent_base.py
agents/builder_team/: __init__.py  agent_manager.py  security_sandbox.py
agents/builder_team/memory/: __init__.py
agents/builder_team/roles/: __init__.py
agents/builder_team/tools/: __init__.py
agents/sales/: collections_score.py  lead_research.py  marketing_outreach.py  sales_coach.py
config/: budgets.yaml
core/orchestrator/: agent_registry.py  main.py  models.py  orchestrator.py
docs/: README.md  architecture-current.md  development-roadmap.md  implementation-summary.md  implementation-templates.md  infrastructure.md  refactoring-roadmap.md
docs/best-practices/: README.md  error-handling.md  logging-monitoring.md  memory-management.md  security-config-scalability.md  workflow-testing.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: AgentBuilder.tsx  Dashboard.tsx  Settings.tsx  WorkflowViewer.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/: cloudrun.tf  datastores.tf  iam.tf  main.tf  network.tf  outputs.tf  registry.tf  variables.tf
orchestrator/: .env  .env.example  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  run_integration_tests.sh
orchestrator/app/: __init__.py  main.py
orchestrator/app/api/: __init__.py
orchestrator/app/api/v1/: __init__.py
orchestrator/app/api/v1/endpoints/: __init__.py  builder_team.py  process.py  process_async.py
orchestrator/app/core/: config.py
orchestrator/app/schemas/: __init__.py  agent.py  base.py  builder_team.py  workflow.py
orchestrator/app/services/: __init__.py
orchestrator/app/services/api/: __init__.py  process_service.py
orchestrator/app/services/llm/: __init__.py  base.py  base_implementation.py  factory.py  interfaces.py  openai_service.py
orchestrator/tests/: README.md  conftest.py  integration_test_documentation.md  test_deterministic_llm.py  test_enhanced_workflow.py  test_integration.py  test_main.py
orchestrator/tests/load/: basic_load_test.js
orchestrator/workers/: __init__.py  worker_main.py
orchestrator/workflows/: __init__.py  enhanced_workflow.py  memory_audit.py  memory_audit_activities.py  memory_audit_workflow.py  planner_tool_responder.py  sample.py  vector_janitor_workflow.py
scripts/: index_changed_files.py
shared/: config.py  pyproject.toml  requirements.txt
shared/cost/: usage_tracker.py
shared/guardrails/: banned_words.py  policy_gate.py
shared/memory/: __init__.py  factory.py  firestore.py  interfaces.py  memory_manager.py  redis.py  vector_janitor.py  vectorstore.py
shared/observability/: langsmith_tracer.py
tests/: smoke_test.py
tests/fixtures/: smoke_test_leads.json
tests/memory_manager_test/: test_memory_manager.py
